--- a/frontend/src/components/Article.module.css
+++ b/frontend/src/components/Article.module.css
@@ -6,6 +6,9 @@
   border-radius: 8px;
   background-color: #f9f9f9;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+  display: flex;
+  justify-content: space-around;
 }
 
 .articleTitle {
