--- a/frontend/src/components/Article.module.css
+++ b/frontend/src/components/Article.module.css
@@ -1,3 +1,9 @@
+body {
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
+}
+
 .articlesContainer {
   max-width: 800px;
   margin: 20px auto;
