--- a/frontend/src/components/Article.module.css
+++ b/frontend/src/components/Article.module.css
@@ -15,6 +15,7 @@ body {
 
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
 .articleTitle {
@@ -28,7 +29,7 @@ body {
 }
 .pointer:hover {
   color: blue;
-  transition: 1s;
+  transition: 0.5s;
 }
 .articleContent {
   font-size: 16px;
@@ -38,5 +39,5 @@ body {
 
 .deleteButton {
   width: 100px;
-  height: 100px;
+  height: 50%;
 }
