--- a/frontend/src/components/Article.module.css
+++ b/frontend/src/components/Article.module.css
@@ -40,4 +40,23 @@ body {
 .deleteButton {
   width: 100px;
   height: 50%;
+  display: inline-block;
+  animation: heartbeat 1s ease-in-out infinite;
+}
+@keyframes heartbeat {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
